--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
 	<title>simple jsx transpiler test</title>
 </head>
 <body>
+	<textarea id="codegen"></textarea>
 	<script src="/simple-jsx-transpiler.js"></script>
 </body>
 </html>
