--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Simple JSX transpiler Play Ground</title>
+	<style>
+		body{
+			font-family: "Courier"
+		}
+	</style>
 </head>
 <body>
 	<textarea id="source" cols="50" rows="20"></textarea>
